* change a few key variables from "long long" to "int64_t" 
* cornerturners now all use sized integers for variables that care
* new corner turners:
  - 1-bit with 16 threads		(slow and convoluted; likely possible to do better)
  - 4-bit with 16 threads
  - 16-bit with 2, 4, 8, 16 threads
  - 32-bit with 2, 4, 8, 16 threads
  - 64-bit with 2, 4, 8, 16 threads
  - Why need for large words?  It turns out that multiplexing multiple channels per thread is mathematically identical to multiplexing one channel per thread but with a total bit width of nBit*nChan
* VDIF multiplexer now supports multiplexing threads with more than one channel.
  - a change in the API for configurevdifmux() is likely coming that will simplify use of this.  For now, use setvdifmuxinputchannels() after configurevdifmux()
* New utility: filterVDIF.  It extracts certain threads and summarized what it found.  Similar to extractVDIFThreads.
* New utility: mk6gather: reads a VDIF stream from a Mark6 unit and writes it to a file.  Time reordering is done at the packet level.
* New utility: mk6ls: lists Mark6 "files" on system.  Respects ENV VAR MARK6_ROOT

Version 1.0
~~~~~~~~~~~
* ******* NOTE CHANGES TO THE API *********
* Changed parameter in createVDIFHeader (pass size of dataarray not full
	VDIF frame).
* Changed function of getVDIFEpoch and setVDIFFrameSecond
* Renamed:
	getVDIFMJD
	getVDIFFrameFullSecond -> getVDIFFrameEpochSecOffset
	setVDIFFrameSecond -> setVDIFFrameEpochSecOffset
	setVDIFFrameFull
	setVDIFMJDSec -> setVDIFFrameMJDSec
	getVDIFDMJD -> getVDIFFrameDMJD
	setVDIFTime -> setVDIFFrameTime (and changed functionality)
	setVDIFEpoch -> setVDIFEpochMJD
* Added
	getVDIFFrameMJDSec
	setVDIFEpochTime
* Added new utility printVDIFgaps to examine a VDIF stream for missing data
* vdifmux now fed by a structure.  This allows for safer, faster and more flexible muxing.
* printVDIFheader: when legacy data don't print any EDV info